--- a/styles.css
+++ b/styles.css
@@ -123,17 +123,6 @@ input::placeholder, textarea::placeholder {
 }
 
 /* --- СТИЛИ ДЛЯ АККОРДЕОНА В НАСТРОЙКАХ --- */
-#main-content details {
-    display: grid;
-    grid-template-rows: auto 0fr;
-    transition: grid-template-rows 0.3s ease-out;
-}
-
-/* При открытии плавно меняем высоту контента */
-#main-content details[open] {
-    grid-template-rows: auto 1fr;
-}
-
 details > summary {
     list-style: none;
     cursor: pointer;
@@ -141,18 +130,16 @@ details > summary {
 details > summary::-webkit-details-marker {
     display: none;
 }
+
 details .details-arrow {
     transition: transform 0.3s ease-out;
 }
+
 details[open] > summary .details-arrow {
     transform: rotate(180deg);
 }
 
-details > div {
-    overflow: hidden;
-}
-
-/* --- Стили для Markdown-контента --- */
+/* --- СТИЛИ ДЛЯ Markdown-контента --- */
 .prose { 
     color: var(--text-primary);
     white-space: pre-wrap;
