--- a/styles.css
+++ b/styles.css
@@ -151,11 +151,12 @@ details[open] > summary .details-arrow {
 
 .prose pre {
     background-color: var(--bg-main);
-    background-image: linear-gradient(145deg, rgba(255, 255, 255, 0.04), rgba(255, 255, 255, 0));
+    background-image: linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15)), 
+                      linear-gradient(145deg, rgba(255, 255, 255, 0.04), rgba(255, 255, 255, 0));
+
     border: 1px solid var(--border-color);
-    border-left: 3px solid var(--accent);
     box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.5);
-    padding: 1rem 1rem 1rem 1.25rem;
+    padding: 1rem;
     border-radius: 0.5rem;
     position: relative;
     margin-top: 1.25em;
