--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@ details[open] > summary .details-arrow {
 /* --- СТИЛИ ДЛЯ БЛОКА КОДА --- */
 .prose pre {
     background-color: rgba(0, 0, 0, 0.4); 
-    background-image: linear-gradient(145deg, rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0));
+    /*background-image: linear-gradient(145deg, rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0)); */
     -webkit-backdrop-filter: blur(8px);
     backdrop-filter: blur(8px);
 
