--- a/styles.css
+++ b/styles.css
@@ -592,6 +592,7 @@ details[open] > summary .details-arrow {
     transition: max-width 0.4s ease-in-out;
     margin-left: auto;
     margin-right: auto;
+    max-width: none;
 }
 
 /* Правило для сужения контента, когда на #fullscreen-modal-body есть класс */
