--- a/styles.css
+++ b/styles.css
@@ -587,15 +587,14 @@ details[open] > summary .details-arrow {
     }
 }
 
-/* Сам текстовый контент, который мы будем сужать */
 #fullscreen-modal-body .prose {
+    max-width: 100%;
+    
     transition: max-width 0.4s ease-in-out;
     margin-left: auto;
     margin-right: auto;
-    max-width: none;
 }
 
-/* Правило для сужения контента, когда на #fullscreen-modal-body есть класс */
 #fullscreen-modal-body.fullscreen-view-compact .prose {
     max-width: 896px; 
 }
